--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.android.databinding'
 apply plugin: 'kotlin-android'
 
 android {
@@ -29,9 +30,12 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'org.jetbrains.anko:anko-sdk21:0.7.3'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+
+    kapt 'com.android.databinding:compiler:1.0-rc4'
 }
 buildscript {
-    ext.kotlin_version = '1.0.0-beta-2423'
+    ext.kotlin_version = '1.0.0-beta-4589'
     repositories {
         mavenCentral()
     }
@@ -42,4 +46,7 @@ buildscript {
 }
 repositories {
     mavenCentral()
+}
+kapt {
+    generateStubs = true
 }
