Refactoring: change entities, move now playing to MVP

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
 
         <service
-            android:name=".ui.services.MusicService" />
+            android:name=".ui.views.impl.MusicService" />
     </application>
 
 </manifest>
