--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '23.0.2'
+    buildToolsVersion '23.0.3'
 
     defaultConfig {
         applicationId "com.neeplayer"
@@ -19,9 +19,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
-    sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
     }
 }
 
@@ -41,25 +38,24 @@ dependencies {
     compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.pushtorefresh.storio:content-resolver:1.8.0'
-    compile 'com.google.dagger:dagger:2.1'
+    compile 'com.google.dagger:dagger:2.2'
 
     kapt 'com.android.databinding:compiler:1.0-rc4'
     kapt 'com.hannesdorfmann.fragmentargs:processor:3.0.1'
-    kapt "com.google.dagger:dagger-compiler:2.1"
+    kapt "com.google.dagger:dagger-compiler:2.2"
 
 }
+
 buildscript {
-    ext.kotlin_version = '1.0.1'
+    ext.kotlin_version = '1.0.2'
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
-repositories {
-    mavenCentral()
-}
+
 kapt {
     generateStubs = true
     arguments {
