--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.android.databinding'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 23
@@ -9,10 +8,12 @@ android {
 
     defaultConfig {
         applicationId "com.neeplayer"
-        minSdkVersion 21
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -23,20 +24,22 @@ android {
 }
 
 dependencies {
+    def supportLibVersion = "23.4.0"
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.github.bumptech.glide:glide:3.6.1'
-    compile 'com.android.support:support-v4:23.2.1'
-    compile 'org.jetbrains.anko:anko-sdk21:0.8.2'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile "com.android.support:support-v4:$supportLibVersion"
+    compile "com.android.support:recyclerview-v7:$supportLibVersion"
+    compile "com.android.support:design:$supportLibVersion"
+    compile "com.android.support:appcompat-v7:$supportLibVersion"
+    compile 'org.jetbrains.anko:anko-sdk21:0.8.2'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     compile 'com.hannesdorfmann.fragmentargs:annotation:3.0.1'
-    compile 'com.android.support:design:23.2.1'
-    compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.pushtorefresh.storio:content-resolver:1.8.0'
     compile 'com.google.dagger:dagger:2.2'
 
