--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     provided "frankiesardo:icepick-processor:$icepickVersion"
     compile "frankiesardo:icepick:$icepickVersion"
 
+    compile 'com.jakewharton.timber:timber:4.1.2'
 }
 
 kapt {
