--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,11 +32,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'org.jetbrains.anko:anko-sdk23:0.8.2'
 
-    def supportLibVersion = "28.0.0"
-    implementation "com.android.support:support-v4:$supportLibVersion"
-    implementation "com.android.support:recyclerview-v7:$supportLibVersion"
-    implementation "com.android.support:design:$supportLibVersion"
-    implementation "com.android.support:appcompat-v7:$supportLibVersion"
+    implementation 'androidx.media:media:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
 
     def glideVersion = "4.8.0"
     implementation "com.github.bumptech.glide:glide:$glideVersion"
