--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,7 @@ android {
         enabled = true
     }
     packagingOptions {
-        exclude 'META-INF/kotlinx-io.kotlin_module'
-        exclude 'META-INF/atomicfu.kotlin_module'
-        exclude 'META-INF/kotlinx-coroutines-io.kotlin_module'
-        exclude 'META-INF/kotlinx-coroutines-core.kotlin_module'
+        exclude 'META-INF/**.kotlin_module'
     }
 }
 
@@ -61,11 +58,22 @@ dependencies {
 
     implementation "com.jakewharton.timber:timber:4.7.1"
 
-    implementation "io.ktor:ktor-client-android:1.2.5"
+    def ktorVersion = "1.2.5"
+    implementation "io.ktor:ktor-client-android:$ktorVersion"
+    implementation "io.ktor:ktor-client-logging-jvm:$ktorVersion"
+    implementation "io.ktor:ktor-client-serialization-jvm:$ktorVersion"
+
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.13.0"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.1'
 }
 
 androidExtensions {
     experimental = true
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions {
+        freeCompilerArgs += "-Xuse-experimental=kotlin.Experimental"
+    }
 }
 
