--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlinx-serialization'
+apply plugin: 'build-time-tracker'
 
 
 android {
@@ -44,8 +45,6 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
 
-    implementation "io.reactivex:rxjava:1.3.8"
-    implementation "io.reactivex:rxandroid:1.2.1"
     implementation "com.pushtorefresh.storio:content-resolver:1.8.0"
 
     def daggerVersion = "2.24"
@@ -70,6 +69,17 @@ androidExtensions {
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
         freeCompilerArgs += "-Xuse-experimental=kotlin.Experimental"
+        freeCompilerArgs += "-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi"
+        freeCompilerArgs += "-Xuse-experimental=kotlinx.coroutines.FlowPreview"
+    }
+}
+
+buildtimetracker {
+    reporters {
+        summary {
+            threshold 1000
+            shortenTaskNames false
+        }
     }
 }
 
