--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:3.6.0-alpha12"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
+        classpath "net.rdrei.android.buildtimetracker:gradle-plugin:0.11.1"
 
 
         // NOTE: Do not place your application dependencies here; they belong
