--- a/compose/compose-sample/src/main/AndroidManifest.xml
+++ b/compose/compose-sample/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.neeplayer.compose.sample"
     >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application>
         <activity android:name=".ComposeSampleActivity">
             <intent-filter>
