--- a/compose/compose-sample/src/main/AndroidManifest.xml
+++ b/compose/compose-sample/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application>
-        <activity android:name=".ComposeSampleActivity">
+        <activity android:name=".ComposeSampleActivity" android:theme="@android:style/Theme.Material.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
