--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,12 @@
         android:name=".NeePlayerApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="${app_name}"
         android:theme="@style/AppTheme"
         >
         <activity
             android:name=".ui.MainActivity"
-            android:label="@string/app_name"
+            android:label="${app_name}"
             android:screenOrientation="portrait"
             >
             <intent-filter>
