--- a/compose/src/main/AndroidManifest.xml
+++ b/compose/src/main/AndroidManifest.xml
@@ -1,1 +1,21 @@
-<manifest package="com.neeplayer.compose"/>
+<?xml version="1.0" encoding="utf-8"?>
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.neeplayer.compose"
+    >
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application>
+        <activity
+            android:name=".ComposeSampleActivity"
+            android:theme="@android:style/Theme.Material.NoActionBar"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
+
+</manifest>
