--- a/compose/src/main/AndroidManifest.xml
+++ b/compose/src/main/AndroidManifest.xml
@@ -4,7 +4,11 @@
     package="com.neeplayer.compose"
     >
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
 
     <application>
         <activity
