--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,6 @@
 android.useAndroidX=true
 android.enableJetifier=true
+
+org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx6G -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options=-Xmx6G
